[gd_scene load_steps=26 format=3 uid="uid://bspa0gu4di0qf"]

[ext_resource type="Script" path="res://Scripts/GameSystem/gui.gd" id="1_6xr3j"]
[ext_resource type="Texture2D" uid="uid://o83228iku50l" path="res://Assets/Gui/ButtonBuySwordman.png" id="2_my0bl"]
[ext_resource type="Texture2D" uid="uid://dmj4ofai8x7hx" path="res://Assets/Gui/PressedButtonBuySwordman.png" id="3_ab4m1"]
[ext_resource type="Texture2D" uid="uid://ct7ro0mg1eh42" path="res://Assets/MinifolksHumans/Outline/MiniSwordMan.png" id="3_o37un"]
[ext_resource type="Texture2D" uid="uid://i4naksfhuqf8" path="res://Assets/Gui/Coin_1.png" id="4_ee70c"]
[ext_resource type="Texture2D" uid="uid://cobi362mwdmse" path="res://Assets/MinifolksHumans/Outline/MiniHalberdMan.png" id="6_6stch"]
[ext_resource type="Texture2D" uid="uid://dhaucdol0pgi3" path="res://Assets/MinifolksHumans/Outline/MiniArcherMan.png" id="7_ouflv"]
[ext_resource type="Texture2D" uid="uid://b5spggok2xv26" path="res://Assets/Gui/1.png" id="8_43qvh"]
[ext_resource type="Texture2D" uid="uid://od7n5koutqys" path="res://Assets/Gui/2.png" id="9_ytjxx"]
[ext_resource type="Texture2D" uid="uid://b834l8b20eyk7" path="res://Assets/Gui/3.png" id="10_n5fwe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uhjy1"]
atlas = ExtResource("8_43qvh")
region = Rect2(17, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cg811"]
atlas = ExtResource("8_43qvh")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8rgl"]
atlas = ExtResource("8_43qvh")
region = Rect2(0, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_uxshk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhjy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cg811")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8rgl")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rp208"]
atlas = ExtResource("9_ytjxx")
region = Rect2(17, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_icwkn"]
atlas = ExtResource("9_ytjxx")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl0uc"]
atlas = ExtResource("9_ytjxx")
region = Rect2(0, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wbwpa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp208")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icwkn")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl0uc")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_i6pib"]
atlas = ExtResource("10_n5fwe")
region = Rect2(17, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j1vr"]
atlas = ExtResource("10_n5fwe")
region = Rect2(0, 0, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs07"]
atlas = ExtResource("10_n5fwe")
region = Rect2(0, 0, 17, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8d4ei"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6pib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j1vr")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs07")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_u576d"]
resource_name = "CoinAni"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AniNodes/CoinBuyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.863429, 6.38936e-05, 3.50392e-05, 1), Color(0.862745, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AniNodes/CoinBuyLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1068, 74), Vector2(1068, 130)]
}

[sub_resource type="Animation" id="Animation_sl84u"]
resource_name = "NotCoin"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AniNodes/CoinBuyLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.863429, 6.38936e-05, 3.50392e-05, 1), Color(0.862745, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AniNodes/CoinBuyLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(984, 92), Vector2(977, 134)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AniNodes/CoinBuyLabel:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["NOT ENOUGH"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_reie4"]
_data = {
"CoinAni": SubResource("Animation_u576d"),
"NotCoin": SubResource("Animation_sl84u")
}

[node name="Gui" type="CanvasLayer"]
script = ExtResource("1_6xr3j")

[node name="BuyButtons" type="Node2D" parent="."]

[node name="Swordman" type="Node2D" parent="BuyButtons"]

[node name="BuySwordman" type="TouchScreenButton" parent="BuyButtons/Swordman"]
scale = Vector2(3, 3)
texture_normal = ExtResource("2_my0bl")
texture_pressed = ExtResource("3_ab4m1")

[node name="MiniSwordMan" type="Sprite2D" parent="BuyButtons/Swordman"]
position = Vector2(48, 39)
scale = Vector2(3, 3)
texture = ExtResource("3_o37un")
hframes = 6
vframes = 6

[node name="Coin1" type="Sprite2D" parent="BuyButtons/Swordman"]
position = Vector2(24, 123)
scale = Vector2(3, 3)
texture = ExtResource("4_ee70c")

[node name="Label" type="Label" parent="BuyButtons/Swordman"]
offset_left = 38.0
offset_top = 105.0
offset_right = 84.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 26
text = "X10"

[node name="Halberdman" type="Node2D" parent="BuyButtons"]
position = Vector2(88, 0)

[node name="BuyHalberdman" type="TouchScreenButton" parent="BuyButtons/Halberdman"]
scale = Vector2(3, 3)
texture_normal = ExtResource("2_my0bl")
texture_pressed = ExtResource("3_ab4m1")

[node name="MiniSwordMan" type="Sprite2D" parent="BuyButtons/Halberdman"]
position = Vector2(48, 39)
scale = Vector2(3, 3)
texture = ExtResource("6_6stch")
hframes = 6
vframes = 6

[node name="Coin1" type="Sprite2D" parent="BuyButtons/Halberdman"]
position = Vector2(24, 123)
scale = Vector2(3, 3)
texture = ExtResource("4_ee70c")

[node name="Label" type="Label" parent="BuyButtons/Halberdman"]
offset_left = 38.0
offset_top = 105.0
offset_right = 84.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 26
text = "X15"

[node name="Archerman" type="Node2D" parent="BuyButtons"]
position = Vector2(177, 0)

[node name="BuyArcherman" type="TouchScreenButton" parent="BuyButtons/Archerman"]
scale = Vector2(3, 3)
texture_normal = ExtResource("2_my0bl")
texture_pressed = ExtResource("3_ab4m1")

[node name="MiniSwordMan" type="Sprite2D" parent="BuyButtons/Archerman"]
position = Vector2(48, 39)
scale = Vector2(3, 3)
texture = ExtResource("7_ouflv")
hframes = 11
vframes = 7

[node name="Coin1" type="Sprite2D" parent="BuyButtons/Archerman"]
position = Vector2(24, 123)
scale = Vector2(3, 3)
texture = ExtResource("4_ee70c")

[node name="Label" type="Label" parent="BuyButtons/Archerman"]
offset_left = 38.0
offset_top = 105.0
offset_right = 84.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 26
text = "X25"

[node name="Info" type="Node2D" parent="."]

[node name="Coin1" type="Sprite2D" parent="Info"]
position = Vector2(964, 71)
scale = Vector2(6, 6)
texture = ExtResource("4_ee70c")

[node name="CoinLabel" type="Label" parent="Info"]
offset_left = 1025.0
offset_top = 42.0
offset_right = 1123.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 42
text = "X200"

[node name="Keyboards" type="Node2D" parent="."]

[node name="1" type="AnimatedSprite2D" parent="Keyboards"]
position = Vector2(47, 184)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_uxshk")
animation = &"new_animation"

[node name="2" type="AnimatedSprite2D" parent="Keyboards"]
position = Vector2(135, 184)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_wbwpa")
animation = &"new_animation"

[node name="3" type="AnimatedSprite2D" parent="Keyboards"]
position = Vector2(225, 184)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_8d4ei")
animation = &"new_animation"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_reie4")
}

[node name="AniNodes" type="Node2D" parent="."]

[node name="CoinBuyLabel" type="Label" parent="AniNodes"]
modulate = Color(0.863429, 6.38936e-05, 3.50392e-05, 1)
offset_left = 984.0
offset_top = 92.0
offset_right = 1154.0
offset_bottom = 126.0
theme_override_font_sizes/font_size = 24
text = "NOT ENOUGH"

[connection signal="pressed" from="BuyButtons/Swordman/BuySwordman" to="." method="_on_buy_swordman_pressed"]
[connection signal="pressed" from="BuyButtons/Halberdman/BuyHalberdman" to="." method="_on_buy_halberdman_pressed"]
[connection signal="pressed" from="BuyButtons/Archerman/BuyArcherman" to="." method="_on_buy_archerman_pressed"]
